# velero-annotations-controller

./: .dockerignore  .gitignore  Dockerfile  README.md  azure-pipelines.yml  build.gradle  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle  settings.gradle.kts
charts/: README.md  index.yaml  velero-annotations-controller-0.1.0.tgz  velero-annotations-controller-0.2.0.tgz
charts/velero-annotations-controller/: Chart.yaml  values.yaml
charts/velero-annotations-controller/templates/: _helpers.tpl  clusterrole-binding.yaml  clusterrole.yaml  deployment.yaml  serviceaccount.yaml
helm/velero-annotations-controller/: Chart.yaml  values.yaml
helm/velero-annotations-controller/templates/: NOTES.txt  clusterrole-binding.yaml  clusterrole.yaml  deployment.yaml  ingress.yaml  serviceaccount.yaml
helm/velero-annotations-controller/templates/tests/: test-connection.yaml
src/: handlers.py  run.py  setup.py
src/main/docker/: Dockerfile.jvm  Dockerfile.native
src/main/java/net/pacalis/application/: PodsWatcher.java
src/main/java/velero/annotations/controller/: ControllerApp.java
src/main/kotlin/net/pacalis/application/: PodHandler.kt  PodsWatcher.kt
src/test/java/velero/annotations/controller/: AppTest.java  ControllerAppIT.java
src/test/resources/: deployment.yml  test.yml
src/velero_annotations_controller/: cli.py
