[tool.poetry]
name = "velero-annotations-controller"
version = "0.1.0"
description = "A controller to synchronize Velero annotations on Pods."
authors = ["Adrien Ferrand <ferrand.ad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "^11.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
velero-annotations-controller = "velero_annotations_controller.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
